--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   color: #444;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #022c43;
+  background: #020202;
   overflow: hidden;
   display: block;
 }
